--- a/src/NavBar.scss
+++ b/src/NavBar.scss
@@ -16,7 +16,6 @@
     background: #B8B3B3;
 }
 
-
 .selectLine {
     margin: 0 auto;
     width: 5px;
@@ -38,4 +37,9 @@
 
 .a {
     display: inline-block;
+}
+.container {
+    width: 300px;
+    height: 550px;
+    position: absolute;
 }
