--- a/src/hands.scss
+++ b/src/hands.scss
@@ -1,5 +1,7 @@
 #handContainer {
     text-align: center;
+    height: 150px;
+
 }
 
 #hand {
@@ -12,7 +14,7 @@
     }
     
     @media only screen and (min-width: 768px) {
-        width: 400px;
+        width: 400px - 300px;        
     }
     
     @media only screen and (min-width: 992px) {
