--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,25 @@
+@import "./fonts.scss";
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
+
 .column {
     float: left;
     width: 33.33%;
+    height: 200px;
+}
+
+.desc {
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    font-family: Adelle;
+}
+
+.globe {
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
 }
