--- a/src/hands.scss
+++ b/src/hands.scss
@@ -5,23 +5,13 @@
 }
 
 #hand {
-    @media only screen and (max-width: 600px) {
-        width: 200px;
-    }
+    width: 100px;
 
-    @media only screen and (min-width: 600px) {
-        width: 300px;
+    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+      width: 200px;
     }
-    
-    @media only screen and (min-width: 768px) {
-        width: 400px - 300px;        
-    }
-    
-    @media only screen and (min-width: 992px) {
-        width: 500px;
-    }
-
-    @media only screen and (min-width: 1200px) {
-        width: 600px;
+  
+    @media only screen and (min-width: 1024px) {
+      width: 300px;
     }
 }
