--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -49,3 +49,8 @@ $fontSize: 30px;
   margin-left: $circleRadius - 2.5px;
   margin-top: $circleRadius * 2;
 }
+
+.link {
+  text-decoration: none;
+  color: #282828;
+}
