--- a/src/Card.scss
+++ b/src/Card.scss
@@ -1,34 +1,45 @@
 @import "./fonts.scss";
 
 .background {
-    background-color: white;
-    width: 70%;
-
+  background-color: white;
+  width: 70%;
 }
 
 .top {
-    display: flex;
-    background-color: #282828;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  background-color: #282828;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .top p {
-    display: flex;
-    font-size: 20px;
-    color: white;
-    font-family: "Roxborough";
-    padding-left: 10px;
-    display: inline-block;
+  display: flex;
+  font-size: 20px;
+  color: white;
+  font-family: "Roxborough";
+  padding-left: 10px;
+  display: inline-block;
 }
 
 .top img {
-    width: 70px;
-    padding-right: 10px;
+  width: 70px;
+  padding-right: 10px;
 }
 
 .bottom {
-    padding: 10px;
-    padding-top: 0px;
-    font-family: "Adelle"
+  padding: 10px;
+  padding-top: 0px;
+  font-family: "Adelle";
+}
+
+.rowImg:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.columnImg {
+  float: left;
+  width: 10%;
+  padding-right: 2%;
 }
