--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,6 @@
   clear: both;
 }
 
-
 .column {
   float: left;
   width: 33.33%;
@@ -44,9 +43,15 @@
 }
 
 .title {
+  @media (min-width: 768px) and (max-width: 1023px) {
+    font-size: 50px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 70px;
+  }
+  font-size: 40px;
   font-family: Roxborough;
   font-style: italic;
-  font-size: 70px;
   line-height: 0px;
   padding-bottom: 3%;
 }
@@ -54,6 +59,10 @@
 #title {
   text-decoration: none;
   color: inherit;
+  box-decoration-break: clone;
+
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 #titleContainer {
