removing inline styles and adding linter

--- a/src/Card.scss
+++ b/src/Card.scss
@@ -54,6 +54,11 @@
   font-family: "Adelle";
 }
 
+.bottomText {
+  color: gray;
+  font-size: 14px;
+}
+
 .rowImg:after {
   content: "";
   display: table;
