--- a/src/App.scss
+++ b/src/App.scss
@@ -71,7 +71,20 @@
 }
 
 #titleContainer {
-  margin-bottom: 4%;
+  margin-bottom: 5%;
+}
+
+#linkContainer {
+  position: absolute;
+  float: none;
+  display: table;
+  margin-top: 0.5%;
+  width: 30%;
+  display: block;
+
+  background: red;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .left-content {
