--- a/src/Card.scss
+++ b/src/Card.scss
@@ -3,6 +3,7 @@
 .background {
   background-color: white;
   width: 70%;
+  margin-bottom: 30px;
 }
 
 .top {
@@ -35,6 +36,8 @@
     font-size: 20px;
   }
   font-size: 10px;
+  white-space: pre-line;
+
 }
 
 .top img {
