--- a/src/Preview.scss
+++ b/src/Preview.scss
@@ -1,12 +1,19 @@
 @mixin preview() {
   float: left;
   padding-right: 2%;
+  padding-bottom: 2%;
   cursor: pointer;
 }
 
 .preview {
   @include preview;
-  width: 10%;
+  @media (min-width: 768px) and (max-width: 1023px) {
+    height: 150px;
+  }
+  @media (min-width: 1024px) {
+    height: 200px;
+  }
+  height: 100px;
 }
 
 .smallerPreview {
