update info; make text smaller; add fade

--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,15 +1,16 @@
 @font-face {
-    font-family: 'Roxborough';
-    src: url('./fonts/Roxborough/RoxboroughCF-Bold.otf') format('opentype');
-    font-weight: bold;
+  font-family: "Roxborough";
+  src: url("./fonts/Roxborough/RoxboroughCF-Bold.otf") format("opentype");
+  font-weight: bold;
 }
 @font-face {
-    font-family: 'Roxborough';
-    src: url('./fonts/Roxborough/RoxboroughCF-BoldItalic.otf') format('opentype');
-    font-weight: bold;
-    font-style: italic;
+  font-family: "Roxborough";
+  src: url("./fonts/Roxborough/RoxboroughCF-BoldItalic.otf") format("opentype");
+  font-weight: bold;
+  font-style: italic;
 }
 @font-face {
-    font-family: 'Adelle';
-    src: url('./fonts/Adelle/AdelleSansEXT-Regular.ttf') format('truetype');
+  font-family: "Adelle";
+  font-size: 10px;
+  src: url("./fonts/Adelle/AdelleSansEXT-Regular.ttf") format("truetype");
 }
