fix navbar hovering bug

--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -53,10 +53,12 @@
   @media (min-width: 768px) and (max-width: 1023px) {
     padding-top: 7px;
     padding-bottom: 7px;
+    height: 70px;
   }
   @media (min-width: 1024px) {
     padding-top: 10px;
     padding-bottom: 10px;
+    height: 100px;
   }
 }
 
