--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@
   font-size: 12px;
   text-align: center;
   font-weight: bold;
-  font-family: Adelle;
+  font-family: "Geist Sans";
 }
 
 .globe {
@@ -74,7 +74,7 @@
   margin-bottom: 2%;
 }
 
-#linkContainer {  
+#linkContainer {
   margin-top: 0.5%;
   width: 100%;
   display: flex;
