--- a/src/hamburgermenu.scss
+++ b/src/hamburgermenu.scss
@@ -23,7 +23,7 @@
 .bm-item {
   display: inline-block;
   color: #ebe7e4;
-  font-family: "Adelle";
+  font-family: "Geist Sans";
   margin-bottom: 12px;
   padding: 10px;
   text-decoration: none;
