--- a/src/Modal.scss
+++ b/src/Modal.scss
@@ -9,7 +9,7 @@
   }
   line-height: 0px;
   font-size: 12px;
-  font-family: "Adelle";
+  font-family: "Geist Sans";
   font-weight: bold;
   display: inline-flex;
 }
