--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,3 +1,5 @@
+@import "~@fontsource/geist-sans/index.css";
+
 @font-face {
   font-family: "Roxborough";
   src: url("./fonts/Roxborough/RoxboroughCF-Bold.otf") format("opentype");
@@ -8,9 +10,4 @@
   src: url("./fonts/Roxborough/RoxboroughCF-BoldItalic.otf") format("opentype");
   font-weight: bold;
   font-style: italic;
-}
-@font-face {
-  font-family: "Adelle";
-  font-size: 10px;
-  src: url("./fonts/Adelle/AdelleSansEXT-Regular.ttf") format("truetype");
 }
