update title styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,7 +55,8 @@
     font-size: 70px;
   }
   font-size: 40px;
-  font-family: Roxborough;
+  font-family: "Playfair Display";
+  letter-spacing: .1rem;
   font-style: italic;
   line-height: 0px;
   padding-bottom: 3%;
