--- a/src/Card.scss
+++ b/src/Card.scss
@@ -23,7 +23,10 @@
   font-size: 12px;
   display: flex;
   color: white;
-  font-family: "Roxborough";
+  font-family: "Playfair Display";
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 0.05rem;
   padding-left: 10px;
   display: inline-block;
 }
