--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -73,7 +73,9 @@
   background: #282828;
   border-radius: 20px;
   color: white;
-  font-family: "Roxborough";
+  font-family: "Playfair Display";
+  font-style: italic;
+  letter-spacing: .05rem;
   font-weight: bold;
   position: relative;
   text-align: center;
