--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,13 +1,3 @@
 @import "~@fontsource/geist-sans/index.css";
 
-@font-face {
-  font-family: "Roxborough";
-  src: url("./fonts/Roxborough/RoxboroughCF-Bold.otf") format("opentype");
-  font-weight: bold;
-}
-@font-face {
-  font-family: "Roxborough";
-  src: url("./fonts/Roxborough/RoxboroughCF-BoldItalic.otf") format("opentype");
-  font-weight: bold;
-  font-style: italic;
-}
+@import "~@fontsource/playfair-display/index.css";
