--- a/src/index.scss
+++ b/src/index.scss
@@ -36,9 +36,10 @@ code {
     font-size: 120px;
   }
 
-  font-family: Roxborough;
+  font-family: "Playfair Display";
+  font-weight: 600;
+  letter-spacing: .1rem;
   background-color: #00000000;
   border-width: 0px;
-  font-weight: bold;
   font-style: italic;
 }
