update title styles

--- a/src/Card.scss
+++ b/src/Card.scss
@@ -26,9 +26,10 @@
   font-family: "Playfair Display";
   font-weight: bold;
   font-style: italic;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.2px;
   padding-left: 10px;
   display: inline-block;
+  padding-right: 10px;
 }
 
 .cardDesc {
