--- a/src/App.scss
+++ b/src/App.scss
@@ -50,13 +50,14 @@
 .title {
   @media (min-width: 768px) and (max-width: 1023px) {
     font-size: 50px;
+    letter-spacing: 1px;
   }
   @media (min-width: 1024px) {
     font-size: 70px;
+    letter-spacing: 1px;
   }
   font-size: 40px;
   font-family: "Playfair Display";
-  letter-spacing: .1rem;
   font-style: italic;
   line-height: 0px;
   padding-bottom: 3%;
