--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -75,7 +75,7 @@
   color: white;
   font-family: "Playfair Display";
   font-style: italic;
-  letter-spacing: .05rem;
+  letter-spacing: 0.5px;
   font-weight: bold;
   position: relative;
   text-align: center;
