--- a/src/index.scss
+++ b/src/index.scss
@@ -25,20 +25,22 @@ code {
 }
 
 #title {
- font-size: 60px;
+ font-size: 45px;
 
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
     font-size: 100px;
+    letter-spacing: 1.5px;
   
   }
 
   @media only screen and (min-width: 1024px) {
     font-size: 120px;
-  }
+    letter-spacing: 1.5px;
 
+  }
+  
   font-family: "Playfair Display";
   font-weight: 600;
-  letter-spacing: .1rem;
   background-color: #00000000;
   border-width: 0px;
   font-style: italic;
