--- a/src/Preview.scss
+++ b/src/Preview.scss
@@ -1,6 +1,7 @@
 @mixin preview() {
   float: left;
-  margin-right: 2%;
+  margin-left: 1%;
+  margin-right: 1%;
   margin-bottom: 2%;
   cursor: pointer;
   border-radius: 10px;
